--- a/app/globals.css
+++ b/app/globals.css
@@ -120,6 +120,10 @@
   body {
     @apply bg-background text-foreground;
   }
+  ::selection {
+    background-color: #971cb6;
+    color: #ffffff;
+  }
 }
 
 @theme inline {
